[package]
name = "conswitch"
version = "0.0.1"
authors = ["Trollwut <trollwut@trollwut.org>"]
description = "A tool to conveniently switch between multiple config files."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
